# jupyter-lmod

./: .gitignore  LICENSE  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: main.yml  test.yml
jupyterlab/: package-lock.json  package.json  tsconfig.json
jupyterlab/src/: index.ts  lmod.d.ts  lmod.js  main.js
jupyterlab/style/: index.css
jupyterlmod/: __init__.py  config.py  handler.py
jupyterlmod/etc/: jupyterlmod_jupyterserverextension.json  jupyterlmod_nbextension.json  jupyterlmod_serverextension.json
jupyterlmod/static/: lmod.js  main.js  module.js
kernel_spec_lmod_manager/: __init__.py
labextension/: package.json  tsconfig.json
labextension/src/: index.ts
labextension/style/: index.css
lmod/: __init__.py
module/: __init__.py
nbextensions/: lmod.js
notebook_lmod_ext/: __init__.py
src/: index.ts
style/: index.css
tests/: conftest.py  pytest.ini  test_handlers.py  test_module.py
